# kholloscope

./: .flake8  .pre-commit-config.yaml  pyproject.toml
src/kholloscope/: __init__.py  school_class.py
tests/: test_school_class.py
