[project]
name = "kholloscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ivan", email = "iv.panico@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.12.4544",
]

[project.scripts]
kholloscope = "kholloscope:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
